03-GKE-Gateway-API-Selfsigned-SSL-k8sSecrets/03-myapp1-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: mygateway1-regional
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: myssl-secret
  addresses:
  - type: NamedAddress
    value: my-regional-pip

## Documentation ##
# https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/v1.GatewayTLSConfig
# https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/v1.SecretObjectReference

## Documentation Links ##
# Gateway Address
# https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/v1.GatewayAddress    

# Gateway Address Type
# https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/v1.AddressType

#gcloud compute addresses create my-regional-pip \
#--region us-central1 \
#--network-tier STANDARD or PREMIUM 

# gcloud compute addresses list
# gcloud compute addresses describe my-regional-pip  --region us-central1
# gcloud compute addresses delete my-regional-pip --region us-central1
